refactor: separate MCP and Paper responsibilities