@@ -6,8 +6,8 @@ import ca.deliyannides.dirtmcp.paper.world.model.BlockPosition;
 import ca.deliyannides.dirtmcp.paper.world.model.BlockStructure.Placement;
 import ca.deliyannides.dirtmcp.paper.world.model.BlockStructure.Run;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 
 @FunctionalInterface
@@ -25,21 +25,18 @@ public interface SetBlocks {
             String label,
             Integer maxChangedBlocks) {
         public Request {
-            if (palettes != null) {
-                palettes = immutablePalettes(palettes);
-            }
-            placements =
-                    placements == null
-                            ? null
-                            : Collections.unmodifiableList(new ArrayList<>(placements));
-            runs = runs == null ? null : Collections.unmodifiableList(new ArrayList<>(runs));
+            Objects.requireNonNull(world, "world");
+            Objects.requireNonNull(origin, "origin");
+            palettes = immutablePalettes(palettes);
+            placements = List.copyOf(placements);
+            runs = List.copyOf(runs);
+            Objects.requireNonNull(label, "label");
         }
     }
 
     record Result(
             String world,
             BlockBounds bounds,
-            List<List<DestinationPaletteEntry>> palettes,
             int seed,
             EditOutcome outcome,
             long blockCount,
@@ -49,14 +46,11 @@ public interface SetBlocks {
 
     private static List<List<DestinationPaletteEntry>> immutablePalettes(
             List<List<DestinationPaletteEntry>> palettes) {
-        // Preserve malformed null entries for operation-layer INVALID_REQUEST reporting.
+        Objects.requireNonNull(palettes, "palettes");
         List<List<DestinationPaletteEntry>> copy = new ArrayList<>(palettes.size());
         for (List<DestinationPaletteEntry> palette : palettes) {
-            copy.add(
-                    palette == null
-                            ? null
-                            : Collections.unmodifiableList(new ArrayList<>(palette)));
+            copy.add(List.copyOf(palette));
         }
-        return Collections.unmodifiableList(copy);
+        return List.copyOf(copy);
     }
 }
